Refactor: Consolidate agent skills and configurations into a new `.agent` directory with dedicated workflows and rules, and remove legacy files.
안티그라비티에서 사용하기 편하도록 스킬 및 워크플로우 정리

--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,7 @@ Thumbs.db
 desktop.ini
 
 # 공개하는 것:
-# ✅ _skills/          (AI 스킬 정의)
-# ✅ .antigravity/     (Antigravity 룰)
-# ✅ .cursor/rules/    (Cursor 룰)
-# ✅ .claude/          (Claude 지침)
+# ✅ .agent/           (Antigravity 룰)
 # ✅ .obsidian/app.json, core-plugins.json  (기본 설정)
 # ✅ 06_Templates/     (노트 템플릿)
 # ✅ 07_Meta/Home.md   (홈 대시보드)
